--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.R linguist-detectable=true
+*.html linguist-detectable=false
+*.tex linguist-detectable=false
+*.bib linguist-detectable=false
+*.sty linguist-detectable=false
